--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,46 +1,4 @@
-.container {
-    display: grid;
-    grid-template-columns: 50% auto;
-}
-.col {
-    padding: .4em 1.3em;
-}
-.color-dark {
-    background: #2885C4;
-}
-.color-light {
-    background: #ffffff;
-}
-
-input.txt {
-    border: 0;
-    padding: 1em;
-    background:#3FA0E1;
-    width: 100%;
-    margin-bottom: 2em;
-    color: #ffffff;
-    font-weight:bold;
-}
-input.btn {
-    border: 0;
-    display: block;
-    padding:1em 3em;
-    background:#A5F883;
-    color:#003A61;
-    margin-bottom:1em;
-    cursor:pointer;
-}
-.life-container {
-    background:#3FA0E1;
-    width: 100%;
-    padding:.5em;
-    font-weight:bold;
-    cursor:pointer;
-}
-
-.title-container {
-    background:#2885C4;
-    width: 100%;
-    padding:.5em;
-    font-weight:bold;
-}
+.column {
+    float: left;
+    width: 33%;
+  }
